--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Copy HTML to root directory
         run: |
-          rsync -av --delete ./docs/build/html/ ./
+          rsync -av ./docs/build/html/ ./
         working-directory: ${{ github.workspace }}/..
         
       - name: Commit and push changes
