Automate moving files to root gh-pages

--- a/.github/workflows/move-files-to-root.yml
+++ b/.github/workflows/move-files-to-root.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Copy HTML to root directory
         run: |
-          rsync -av --delete ./docs/build/html/ ./
+          rsync -av --delete /docs/build/html/ /
         working-directory: ${{ github.workspace }}/..
         
       - name: Commit and push changes
