--- a/.github/workflows/move-files-to-root.yml
+++ b/.github/workflows/move-files-to-root.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Copy HTML to root directory
         run: |
-          rsync -av --delete /docs/build/html/ /
-        working-directory: ${{ github.workspace }}/..
+          cd docs/build/html && rsync -av --delete ./ ../../../
+        working-directory: ${{ github.workspace }}
         
       - name: Commit and push changes
         run: |
